---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025-03-23
  Features:
    - Adds a toolbar button to enable dual rail planner.
    - Utilizes the standard rail planner, and builds the opposite rail in real time.
    - Supports two way rails with a 2 tile gap.
    - Rail planner will self-cancel when it can't make an opposite rail.
    - Opposite rail will automatically receive supports.
    - Both paths will receive rail signals.
  Known Issues:
    - The left turn algorithm is incomplete. There are some patterns of left turns
      where the algorithm gives up, but have easy solutions.
    - Some bugs exist which cause issues when transitioning between rail layers.
    - Some issues with starting elevated rails from rail supports.