@@ -8,6 +8,7 @@
     "description": "Adds a rail planner which places two parrallel paths.",
     "dependencies": ["base >= 2.0", "? elevated-rails >= 2.0"],
     "package": {
+        "no_git_push": true,
         "readme": "README.md",
         "faq": "FAQ.md",
         "gallery": ["gallery/*"],
