@@ -1,3 +1,8 @@
+[error]
+prefix=__1__ <DRP>
+format=[__1__ __2__] Error: __3__
+player-message=<DualRailPlanner> [color=red]Error:[/color] __1__
+
 [debug]
 prefix=__1__ <DRP>
 format=[__1__ __2__] __3__
@@ -20,7 +25,6 @@ s-bend-error=The path you built triggered a condition which should never happen.
 path-rewind-failed=Path Rewind failed.
 path-too-sharp=Path turn too sharp.
 path-loop-break=Breaking from an infinite loop.
-path-straight-debt=Applying straight debt: __1__
 path-invalid-ramp=Unable to build ramp.
 
 profiler-report=Profiling for __1__
